Angriffsphase abgeschlossen + kleine Änderungen bei String Eingaben.